fix: add z-index value to nav component (#15)

--- a/src/styles/skeleton/variables/_z-index.scss
+++ b/src/styles/skeleton/variables/_z-index.scss
@@ -1,4 +1,5 @@
 $z-index: (
 	default: 1,
+	nav: 3,
 	modal: 100
 );
